--- a/.gitignore
+++ b/.gitignore
@@ -1,200 +1,15 @@
-# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-*.pyd
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib60/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a PyInstaller script; this is targeted
-#  at preserving the PyInstaller script itself.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-pytestdebug.log
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# PEP 582; __pypackages__
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype
-.pytype/
-
-# Cython debug symbols
-cython_debug/
+*.pyc
 
 # VS Code
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
 
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
-
-# PyCharm
-.idea/
-
-# Eclipse
-.project
-.pydevproject
-.settings/
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Windows
-[Dd]esktop.ini
-
-# CSV files (if they are data, not part of the source)
-# *.csv
-
-# Log files
-*.log
-logs/
-
-# Temporary files
-*.tmp
-*~
-*.swp
-*.swo
-
-# --- Codex One Specific ---
-
-# Diretório de dados principal (se você decidir não querer NADA dele no git)
-# Se você tiver algum ficheiro de configuração ou template dentro de 'dados' que QUEIRA versionar,
-# ajuste esta linha ou use negações mais específicas (ex: !dados/meu_template.txt)
-# dados/
-
-# Conteúdo específico dentro de 'dados' que NUNCA deve ir para o git:
+# Diretório de dados do Codex One
 dados/chroma_db/
 dados/documentos_usuario/
-dados/rag_database.db # Se você voltar a usar SQLite para algo
-dados/rag_database.db-journal # Journal do SQLite
+dados/rag_database.db
+dados/rag_database.db-journal
 
-# Arquivos de teste temporários (se não forem limpos automaticamente)
-temp_test_uploads/
-
-# Extensões SQLite VSS compiladas localmente (se você tivesse conseguido compilar)
-# *.dll
-# *.so
-# *.dylib
-# (Já cobertos pelas regras genéricas de C extensions, mas pode ser explícito)
-
-# Cache de modelos Sentence Transformers ou Hugging Face (se baixados para o projeto)
-# Geralmente estão no diretório home do usuário, mas para garantir:
+# Cache de modelos
 .cache/
 models/
